test/functions/iterators/errors/mismatchedArgsS8-L64-F64.future
bug: Internal error in _toFollower or mismatched serial and LF iters
#14745

serial arg:int(8), leader arg:int, follower arg:int

Once this passes, the compopts file should be removed.
